fixed search bar on mobile

--- a/public/css/src/seek/seek.css
+++ b/public/css/src/seek/seek.css
@@ -96,10 +96,10 @@
     box-shadow: none;
     top: auto;
     position: fixed!important;
-    bottom: 80px!important;
+    bottom: 80px;
     top: auto!important;
-    right: 86px!important;
-    left: auto!important;
+    right: 86px;
+    left: auto;
     border-radius: 10px 10px 0 0;
 }
 
